# bookshelf-primap-hist

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml  towncrier.toml
.github/workflows/: ci.yaml
changelog/: 1.feature.md  2.improvement.md  2.trivial.md
scripts/: changelog-to-release-template.py
src/: primap-hist.py  primap-hist.yaml
tests/: conftest.py  test_primap.py
